src/test/deca/codegen/invalid/options/floatOverflowConstIntFloat.deca
// Description :
//    Test de l'option -n
//
// Resultats :
//    !! SI EXECUTION AVEC L'OPTION -n !!
//    L'exécution n'affiche rien

{
    float x = 1000000 * 340282346638528860000000000000000000.0;
}